--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,10 +1,12 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>InvoiceManager</title>
   </head>
   <body>
+    <h1>Hello from public</h1>
     <div id='root'></div>
   </body>
 </html>
